# video_synopsis

./: .gitignore  LICENSE  Readme.md  app.py  compare_optimizers.py  energy.py  main.py  pyproject.toml  requirements.txt  sort.py  tube_augment.py  tube_util.py  utils.py
docs/: mcts_vs_others.md
supplementary/: our_args.py  tube_util.py  video_4m_dir.py
video_synopsis/: __init__.py  __main__.py  cli.py  config.py  pipeline.py  webui.py
video_synopsis/data/: __init__.py  tube_store.py  types.py
video_synopsis/models/: __init__.py  base.py
video_synopsis/models/segmenters/: __init__.py  fastsam.py  multi_gpu.py  people_seg.py  rfdetr.py
video_synopsis/models/trackers/: __init__.py  botsort_tracker.py  sam3_tracker.py  sort_tracker.py
video_synopsis/optimization/: __init__.py  base.py  collision.py  energy.py  mcmc.py  mcts.py  pso.py  schedule.py  visualize.py
video_synopsis/rendering/: __init__.py  background.py  stitcher.py
